--- a/res/style/post-style.css
+++ b/res/style/post-style.css
@@ -1,12 +1,8 @@
-html {
-		
-		}
-		
-	body {
+body {
 		margin:0;
 		overflow:hidden;
 		font-weight:800;
-		background:#eee;
+		background:#e1e1e1;
 		user-select: none; /* supported by Chrome and Opera */
                 -webkit-user-select: none; /* Safari */
                 -khtml-user-select: none; /* Konqueror HTML */
@@ -58,11 +54,17 @@ html {
 .im, .img3, .img4, .img5, .img6 {
 	display:none;
 	}
+
+	
+	.img-bg {
+		
+		}
 	
 .img {
 	width:100%;
+	height:120%;
 	position:absolute;
-	transform:translateY(-50px);
+	transform:translateY(-140px);
 	z-index:9;
 	transition:transform 0.6s;
 	}
@@ -134,3 +136,36 @@ html {
     z-index:998;
   display:none;
   }
+
+  @media (min-width:600px) {
+	.img {
+		width:90%;
+		margin-left:5%;
+	}
+
+	.zoom1x {
+		display: none;
+	}
+
+	.zoom15x {
+		display: none;
+	}
+}
+
+
+@media (min-width:800px) {
+	.img {
+		width:60%;
+		margin-left:20%;
+	}
+
+	
+
+	.zoom1x {
+		display: none;
+	}
+
+	.zoom15x {
+		display: none;
+	}
+}
