--- a/res/latest-style.css
+++ b/res/latest-style.css
@@ -15,7 +15,7 @@ html {
 body {
   margin:0;
   text-align: center;
-  background: #eee;
+  background: #e1e1e1;
   overflow-x: hidden;
   font-family: Montserrat-Regular;
 	}
