--- a/res/style/post-style.css
+++ b/res/style/post-style.css
@@ -110,7 +110,7 @@ font-size:20px;
 	position:absolute;
         top:5px; left:5px;
 	border-radius:5px;
-	background-color:#75AB40;
+	background:#F69272;
 	opacity:0.7;
 	z-index:999;
 	}
@@ -121,7 +121,7 @@ font-size:20px;
 	position:absolute;
         top:5px; left:80px;
 	border-radius:5px;
-	background-color:#75AB40;
+	background:#F69272;
 	opacity:0.3;
 	z-index:999;
 	}
